# FAIRmodels-model-package

./: .gitignore  README.md  api-specification.yaml  setup.py
.github/workflows/: build_base_image.yml
FairModel/: cli.py
docker_image/: Dockerfile  api-specification.yaml  main.py  model_execution_default.py
package/: pyproject.toml
package/src/: cli.py  helper.py  model_execution.py
